RESOLVED FIXED101146
Baseline JIT should use structure watchpoints whenever possible
https://bugs.webkit.org/show_bug.cgi?id=101146
Summary Baseline JIT should use structure watchpoints whenever possible
Filip Pizlo
Reported 2012-11-03 02:51:20 PDT
Patch forthcoming
Attachments
the patch (13.83 KB, patch)
2012-11-03 02:56 PDT, Filip Pizlo
sam: review+
buildbot: commit-queue-
patch for landing (13.91 KB, patch)
2012-11-04 01:03 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2012-11-03 02:56:17 PDT
Created attachment 172214 [details] the patch
WebKit Review Bot
Comment 2 2012-11-03 02:59:06 PDT
Attachment 172214 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/jit/JIT.h:470: The parameter name "object" adds no information, so it should be removed. [readability/parameter_name] [5] Source/JavaScriptCore/jit/JIT.h:471: The parameter name "object" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3 2012-11-03 03:21:51 PDT
Filip Pizlo
Comment 4 2012-11-04 01:03:56 PST
Created attachment 172241 [details] patch for landing Checking if Windows builds now.
Filip Pizlo
Comment 5 2012-11-04 19:41:33 PST
Note You need to log in before you can comment on or make changes to this bug.